# enumagic.py

./: .gitignore  .readthedocs.yaml  pyproject.toml  setup.cfg  tests.py
.github/workflows/: deploy.yml  tests.yml
docs/: conf.py  index.rst
enumagic/: __init__.py  _iter.py  _mapping.py
