[metadata]
name = enumagic
license = Zlib
keywords = enum, magic
author = ObserverOfTime
author_email = chronobserver@disroot.org
version = attr: enumagic.__version__
description = Enums infused with magic.
long_description = file: README.rst
long_description_content_type = test/x-rst
url = "https://github.com/ObserverOfTime/enumagic.py"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: zlib/libpng License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug tracker = "https://github.com/ObserverOfTime/enumagic.py/issues"
    Donations = "https://github.com/sponsors/ObserverOfTime"

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
dev =
    sphinx~=4.3.1
    sphinx-rtd-theme~=1.0

[bdist_wheel]
universal = 1
